fix for max sizes on mobile

--- a/flask_app/static/assets/css/image_styles.css
+++ b/flask_app/static/assets/css/image_styles.css
@@ -5,6 +5,6 @@
 }
 
 #image_container > img{
-    max-height: 79vh;
-    max-width: 94vw;
+    max-height: 79svh;
+    max-width: 94svw;
 }
